--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "marvel",
   "version": "0.1.0",
-  "homepage": "https://AlexFeeD.github.io/marvel_project",
+  "homepage": "https://alexfeed.github.io/marvelAPI_project/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "immer": "^9.0.12",
     "prop-types": "^15.8.1",
@@ -14,7 +15,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^1.0.1"
+    "react-transition-group": "^4.4.2",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
